[tool.poetry]
name = "ts_helpme"
version = "0.0.1"
description = "Time series helpers"
readme = "README.md"
packages = [{include = "tshelpme"}]
authors = ["Author <author@email.com>"]

[tool.poetry.dependencies]
# Implicit "main" group
python = ">=3.9,<3.11"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.2"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[tool.poetry.group.build.dependencies]
build = "^1.2.2.post1"


[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D105", "D107"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"